objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Case Investigation</fullName>
        <description>Case Investigation process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed %E2%80%93 Accepted</fullName>
        </values>
        <values>
            <fullName>Closed %E2%80%93 Unjustified</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Waiting for customer data</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>New Case</fullName>
        <description>New Case</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed %E2%80%93 Accepted</fullName>
        </values>
        <values>
            <fullName>Closed %E2%80%93 Unjustified</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Waiting for customer data</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Acknowledge_Complaint__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Acknowledge Complaint</description>
        <label>Acknowledge Complaint</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Batch_Number__c</fullName>
        <label>Batch Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Area__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Area</label>
        <referenceTo>Business_Area__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CaseOwner__c</fullName>
        <formula>Owner:User.Username</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseReasons_C__c</fullName>
        <label>Case Reason</label>
        <picklist>
            <controllingField>Product_Group_C__c</controllingField>
            <picklistValues>
                <fullName>Bow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dimensioning/Elongation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dimensioning/fitting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dimensioning/Length</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dimensioning/Model</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dimensioning/Squareness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gloss level</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Identification/Absence of inkjet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Identification/Inkjet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Identification/label</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Identification/Wrong inkjet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Letter of contents absent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Material/</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Material/ Tensile impact strenght </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Material/Adhesion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Material/Hardness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Material/Recipe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Material/Shrinkage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No tape</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Package/Boxes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Package/contamination</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Package/damaged</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Package/Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Package/pallet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Package/wrong</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Surface</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Surface/waviness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tape wrong position</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Twisting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wrong application of foil</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cost_Detail__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Cost Detail</description>
        <label>Cost Detail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_PO_Number__c</fullName>
        <label>Customer PO Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Ref__c</fullName>
        <label>Customer Ref</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Type__c</fullName>
        <label>Customer Type</label>
        <picklist>
            <picklistValues>
                <fullName>InterCompany</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer - Formal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer – Informal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Case Details Captured&quot;, &quot;Missing: &quot;&amp;IF( ISPICKVAL( Status,&quot;&quot;),&quot;Status, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(ISPICKVAL( Type ,&quot;&quot;), &quot;Type, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( Origin ,&quot;&quot;), &quot;Origin, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( Reason ,&quot;&quot;), &quot;Reason, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( Priority ,&quot;&quot;), &quot;Priority, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN( Subject )&lt;5, &quot;Meaningful Subject Line&quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( OR(LEN(ContactId)=0,LEN( AccountId)=0), &quot;Associated Account and Contact&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( OR(LEN(ContactId)=0,LEN( AccountId)=0), 0,10) + IF( ISPICKVAL( Status ,&quot;&quot;), 0,15) + IF( ISPICKVAL( Type ,&quot;&quot;), 0,15) + IF( ISPICKVAL( Origin ,&quot;&quot;), 0,15) + IF( ISPICKVAL(   Reason ,&quot;&quot;), 0,15) + IF(ISPICKVAL(Priority, &quot;&quot;),0,15) + IF(LEN( Subject )&lt;5,0,15)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Investigating__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Investigating</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Investigation_status__c</fullName>
        <label>Investigation status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting Customer Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <label>Order Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Our_Item__c</fullName>
        <label>Our Item</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Group_C__c</fullName>
        <label>Product Group</label>
        <picklist>
            <picklistValues>
                <fullName>Tear Tape</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Labels</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extrusion Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Filter Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Porous Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cartons</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leaflets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchased Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufactured Cards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Protection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electrical &amp; Fasteners</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tapes and POS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Security Seals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Printer Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Access Hardware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hose Protection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hardware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MRO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Type</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QueriedQty__c</fullName>
        <label>Queried Quantity</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Receiving_Region__c</fullName>
        <formula>TEXT(Receving_Site__r.Region__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Receiving Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Receving_Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Receiving Site</label>
        <referenceTo>Site__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Respond_to_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Respond to Customer</description>
        <label>Respond to Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBU__c</fullName>
        <formula>Account.Business_Area__r.SBU__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SBU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM__c</fullName>
        <label>Unit Of Measure</label>
        <picklist>
            <picklistValues>
                <fullName>Metres</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pieces</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reels</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thousands</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>AllCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>OWNER_NAME</columns>
        <columns>Receving_Site__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Cases</label>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <recordTypes>
        <fullName>Case_nvestigation</fullName>
        <active>true</active>
        <businessProcess>Case Investigation</businessProcess>
        <description>Case Investigation</description>
        <label>Case Investigation</label>
    </recordTypes>
    <recordTypes>
        <fullName>New_Case</fullName>
        <active>true</active>
        <businessProcess>New Case</businessProcess>
        <description>New Case</description>
        <label>New Case</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Mandatroy_Investigation</fullName>
        <active>true</active>
        <description>Please complete Investigation Task before closing thes case.</description>
        <errorConditionFormula>IF ( OR(ISPICKVAL(Status,&quot;Closed – Accepted&quot;),ISPICKVAL(Status,&quot;Closed – Unjustified&quot;))  &amp;&amp; not(ISPICKVAL(Investigation_status__c , &quot;Completed&quot;)),true,false   )</errorConditionFormula>
        <errorMessage>Please complete Investigation Task before closing thes case.</errorMessage>
    </validationRules>
</CustomObject>